# cpp-server-sdk

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindMaxMindDB.cmake  googletest.cmake  httplib.cmake  json.cmake  maxminddb.cmake
include/: statsig.h
src/: client.cpp  client.h  country_lookup.h  evaluator.cpp  evaluator.h  evaluator_utils.h  event_logger.cpp  event_logger.h  exceptions.h  json.h  layer.h  network.cpp  network.h  output_logger.h  server.cpp  server.h  statsig.cpp  statsig.h  statsig_metadata.h  store.cpp  store.h  types.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test-example.cpp  test-initialize.cpp  test_country_lookup.cpp  test_example.cpp  test_layer_exposures.cpp  test_logger.cpp  test_overrides.cpp  test_store.cpp
tests/testdata/: download_config_specs.json
tests/utils/: commonfixture.h  httpfixture.h
